Feature: Delete Service
